Several contant changes

--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
       <nav>
         <a class="button-dark" href="#contact">Contact</a>
         <a class="button-dark" href="#bio">Bio</a>
+        <a class="button-dark" href="#cv">CV</a>
       </nav>
     </header>
     <main class="page-main">
       <img class="image-fluid" src="images/me.jpeg" alt="" />
-      <section class="lists">
+      <section class="interests">
         <div>
           <h2>interests</h2>
           <ul>
@@ -38,7 +39,8 @@
             <li>Videogames</li>
           </ul>
         </div>
-
+      </section>
+      <section class="skills">
         <div>
           <h2>skills</h2>
           <ul>
@@ -53,27 +55,54 @@
         </div>
       </section>
       <section id="contact">
-        <h2>contact</h2>
-        Mail me<a class="button-light" href="mailto:roscha80@web.de"
-          >roscha80@web.de</a
-        ><br />
+        <address>
+          <h2>contact</h2>
+          <a class="button-light" href="mailto:roscha80@web.de">Mail me</a
+          ><br />
+        </address>
       </section>
-      <section>
-        <a href="https://github.com/roscha80" rel="noopener noreferrer"
-          ><img src="images/Octocat.png" alt="Meet me on Github" /></a
-        ><br />
-        <a href="https://codepen.io/your-work/" rel="noopener noreferrer"
-          ><img src="images/codepen.png" alt="Meet me on Codepen" /></a
+      <section class="social">
+        <a
+          class="social"
+          href="https://github.com/roscha80"
+          rel="noopener noreferrer"
+          target="_blank"
+          alt
+          ><img
+            src="images/Octocat.png"
+            alt="Meet me on Github"
+            title="Meet me on Github" /></a
         ><br />
         <a
+          class="social"
+          href="https://codepen.io/your-work/"
+          rel="noopener noreferrer"
+          target="_blank"
+          ><img
+            src="images/codepen.png"
+            alt="Meet me on Codepen"
+            title="Meet me on Codepen" /></a
+        ><br />
+        <a
+          class="social"
           href="https://www.linkedin.com/in/rob-schade-ab892b19a/"
           rel="noopener noreferrer"
-          ><img src="images/linkedin.png" alt="Meet me on LinkedIn" /></a
+          target="_blank"
+          ><img
+            src="images/linkedin.png"
+            alt="Meet me on LinkedIn"
+            title="Meet me on LinkedIn" /></a
         ><br />
         <a
+          class="social"
           href="https://www.xing.com/profile/Robert_Schade13/portfolio"
           rel="noopener noreferrer"
-          ><img src="images/640px-Xing_logo.svg.png" alt="Meet me on Xing" />
+          target="_blank"
+          ><img
+            src="images/640px-Xing_logo.svg.png"
+            alt="Meet me on Xing"
+            title="Meet me on Xing"
+          />
         </a>
         <br />
       </section>
@@ -86,38 +115,32 @@
           reiciendis enim.
         </p>
       </section>
-      <section>
+      <section id="cv">
         <h2>cv</h2>
         <dl>
           <dd>04.2021 bis jetzt</dd>
           <dd>Web Development Bootcamp</dd>
-          <dd>neuefische GmbH</dd>
-          <dd>Hamburg</dd>
+          <dd>neuefische GmbH, Hamburg</dd>
           <br />
           <dd>04.2020 bis 03.2021</dd>
           <dd>Junior Java Developer</dd>
-          <dd>Academic Works</dd>
-          <dd>Hamburg</dd>
+          <dd>Academic Works, Hamburg</dd>
           <br />
           <dd>01.2020 bis 03.2020</dd>
           <dd>Java Bootcamp</dd>
-          <dd>Academic Works</dd>
-          <dd>Hamburg</dd>
+          <dd>Academic Works, Hamburg</dd>
           <br />
           <dd>05.2014 bis 12.2019</dd>
           <dd>Grafiker/Designer</dd>
-          <dd>Justfitteds</dd>
-          <dd>Hamburg</dd>
+          <dd>Justfitteds, Hamburg</dd>
           <br />
           <dd>2013 bis 2014</dd>
           <dd>Grafiker/Cutter/Colorist</dd>
-          <dd>Mamapost GmbH</dd>
-          <dd>Hamburg/Berlin</dd>
+          <dd>Mamapost GmbH, Hamburg/Berlin</dd>
           <br />
           <dd>2008 bis 2013</dd>
           <dd>Grafiker/Head of graphic</dd>
-          <dd>TVN Group/Mobile Productions</dd>
-          <dd>Hannover/Hamburg</dd>
+          <dd>TVN Group/Mobile Productions, Hannover/Hamburg</dd>
         </dl>
       </section>
     </main>
