Add flexbox to interests and skills

--- a/index.html
+++ b/index.html
@@ -25,33 +25,45 @@
     <main class="page-main">
       <img class="image-fluid" src="images/me.jpeg" alt="" />
       <section class="interests">
-        <div>
-          <h2>interests</h2>
-          <ul>
-            <li>Roadbike/Crossbike</li>
-            <li>Grafik Design</li>
-            <li>Fonts</li>
-            <li>Sneaker</li>
-            <li>Travel</li>
-            <li>South-East-Asia</li>
-            <li>80ties</li>
-            <li>Movies</li>
-            <li>Videogames</li>
-          </ul>
+        <h2>interests</h2>
+        <div id="flexbox">
+          <div>
+            <dl>
+              <dd>Roadbike/Crossbike</dd>
+              <dd>Grafik Design</dd>
+              <dd>Fonts</dd>
+              <dd>Sneaker</dd>
+              <dd>Travel</dd>
+            </dl>
+          </div>
+          <div>
+            <dl>
+              <dd>South-East-Asia</dd>
+              <dd>80ties</dd>
+              <dd>Movies</dd>
+              <dd>Videogames</dd>
+            </dl>
+          </div>
         </div>
       </section>
       <section class="skills">
-        <div>
-          <h2>skills</h2>
-          <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-            <li>Java</li>
-            <li>Adobe CS</li>
-            <li>Procreate</li>
-            <li>Final Cut</li>
-          </ul>
+        <h2>skills</h2>
+        <div id="flexbox">
+          <div>
+            <dl>
+              <dd>HTML</dd>
+              <dd>CSS</dd>
+              <dd>JavaScript</dd>
+              <dd>Java</dd>
+            </dl>
+          </div>
+          <div>
+            <dl>
+              <dd>Adobe CS</dd>
+              <dd>Procreate</dd>
+              <dd>Final Cut</dd>
+            </dl>
+          </div>
         </div>
       </section>
       <section id="contact">
