--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
       <section id="contact">
         <address>
           <h2>contact</h2>
-          <a class="button-light" href="mailto:roscha80@web.de">Mail me</a
+          <a class="button-light" href="mailto:roscha80@web.de" title="Mail me"
+            >Mail me</a
           ><br />
         </address>
       </section>
@@ -121,10 +122,20 @@
       <section id="bio">
         <h2>bio</h2>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis, quo
-          cum. Dolore, doloremque! Nisi quaerat omnis optio? Officiis explicabo,
-          laborum eos sequi accusantium nihil aspernatur eaque dolorem non
-          reiciendis enim.
+          Born in 1980 in Greifswald in East Germany, i finished school with
+          middle maturity in 1996. After finishing training to become draftsman
+          and worked in different companies. I started 2003 my career in the
+          graphic world at Mediaschool in Waren, Muritz.<br />
+          Working several years as a graphic artist in different fields and
+          agencys around europe i became 2008 head of graphic at TVN GmbH, a TV
+          and Movie production company in Hannover. <br />
+          Since i worked over 7 years in the tv and movie industry i decided to
+          get more into coding and finished successful the Academic Works Java
+          Bootcamp in 2020. <br />
+          As a graphic artist my love is to see and create beautyful things and
+          i managed to get a place at the web development bootcamp at neuefische
+          to learn more about frontend development. <br />
+          Hopefully i will finish it successful in juli 2021.
         </p>
       </section>
       <section id="cv">
@@ -159,10 +170,12 @@
     <footer>
       <section>
         <nav>
-          <a class="button-light" href="#impressum">Impressum</a>
-          <a class="button-light" href="#agb">AGB</a>
+          <a class="button-light" href="#imprint">Imprint</a>
+          <a class="button-light" href="#agtc">GTC</a>
           <a class="button-light" href="#contact">Contact</a>
-          <a class="button-light" href="#start">Back to Top</a>
+          <a class="button-light" href="#start" title="Up and away"
+            >Back to Top</a
+          >
         </nav>
       </section>
     </footer>
