Add media query to flexbox social

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     </header>
     <main class="page-main">
       <img class="image-fluid" src="images/me.jpeg" alt="" />
-      <section class="interests">
+      <section>
         <h2>interests</h2>
-        <div id="flexbox">
+        <div id="flexbox-interests">
           <div>
             <dl>
               <dd>Roadbike/Crossbike</dd>
@@ -46,9 +46,9 @@
           </div>
         </div>
       </section>
-      <section class="skills">
+      <section>
         <h2>skills</h2>
-        <div id="flexbox">
+        <div id="flexbox-skills">
           <div>
             <dl>
               <dd>HTML</dd>
@@ -75,48 +75,61 @@
         </address>
       </section>
       <section class="social">
-        <a
-          class="social"
-          href="https://github.com/roscha80"
-          rel="noopener noreferrer"
-          target="_blank"
-          alt
-          ><img
-            src="images/Octocat.png"
-            alt="Meet me on Github"
-            title="Meet me on Github" /></a
-        ><br />
-        <a
-          class="social"
-          href="https://codepen.io/your-work/"
-          rel="noopener noreferrer"
-          target="_blank"
-          ><img
-            src="images/codepen.png"
-            alt="Meet me on Codepen"
-            title="Meet me on Codepen" /></a
-        ><br />
-        <a
-          class="social"
-          href="https://www.linkedin.com/in/rob-schade-ab892b19a/"
-          rel="noopener noreferrer"
-          target="_blank"
-          ><img
-            src="images/linkedin.png"
-            alt="Meet me on LinkedIn"
-            title="Meet me on LinkedIn" /></a
-        ><br />
-        <a
-          class="social"
-          href="https://www.xing.com/profile/Robert_Schade13/portfolio"
-          rel="noopener noreferrer"
-          target="_blank"
-          ><img
-            src="images/640px-Xing_logo.svg.png"
-            alt="Meet me on Xing"
-            title="Meet me on Xing"
-          />
-        </a>
+        <div id="flexbox-social">
+          <div>
+            <a
+              class="social"
+              href="https://github.com/roscha80"
+              rel="noopener noreferrer"
+              target="_blank"
+              alt
+              ><img
+                src="images/Octocat.png"
+                alt="Meet me on Github"
+                title="Meet me on Github"
+            /></a>
+          </div>
+          <br />
+          <div>
+            <a
+              class="social"
+              href="https://codepen.io/your-work/"
+              rel="noopener noreferrer"
+              target="_blank"
+              ><img
+                src="images/codepen.png"
+                alt="Meet me on Codepen"
+                title="Meet me on Codepen"
+            /></a>
+          </div>
+          <br />
+          <div>
+            <a
+              class="social"
+              href="https://www.linkedin.com/in/rob-schade-ab892b19a/"
+              rel="noopener noreferrer"
+              target="_blank"
+              ><img
+                src="images/linkedin.png"
+                alt="Meet me on LinkedIn"
+                title="Meet me on LinkedIn"
+            /></a>
+          </div>
+          <br />
+          <div>
+            <a
+              class="social"
+              href="https://www.xing.com/profile/Robert_Schade13/portfolio"
+              rel="noopener noreferrer"
+              target="_blank"
+              ><img
+                src="images/640px-Xing_logo.svg.png"
+                alt="Meet me on Xing"
+                title="Meet me on Xing"
+              />
+            </a>
+          </div>
+        </div>
         <br />
       </section>
       <section id="bio">
