Restore deleted CSS Group

--- a/index.html
+++ b/index.html
@@ -78,7 +78,6 @@
         <div id="flexbox-social">
           <div>
             <a
-              class="social"
               href="https://github.com/roscha80"
               rel="noopener noreferrer"
               target="_blank"
@@ -92,7 +91,6 @@
           <br />
           <div>
             <a
-              class="social"
               href="https://codepen.io/your-work/"
               rel="noopener noreferrer"
               target="_blank"
@@ -105,7 +103,6 @@
           <br />
           <div>
             <a
-              class="social"
               href="https://www.linkedin.com/in/rob-schade-ab892b19a/"
               rel="noopener noreferrer"
               target="_blank"
@@ -118,7 +115,6 @@
           <br />
           <div>
             <a
-              class="social"
               href="https://www.xing.com/profile/Robert_Schade13/portfolio"
               rel="noopener noreferrer"
               target="_blank"
@@ -183,8 +179,8 @@
     <footer>
       <section>
         <nav>
-          <a class="button-light" href="#imprint">Imprint</a>
-          <a class="button-light" href="#agtc">GTC</a>
+          <!-- <a class="button-light" href="#imprint">Imprint</a> -->
+          <!-- <a class="button-light" href="#agtc">GTC</a> -->
           <a class="button-light" href="#contact">Contact</a>
           <a class="button-light" href="#start" title="Up and away"
             >Back to Top</a
