Delete contact button on the bottom

--- a/index.html
+++ b/index.html
@@ -204,8 +204,7 @@
     <footer>
       <section>
         <nav>
-          <a class="button-light" href="#contact">Contact</a>
-          <a class="button-light" href="#start" title="Up and away"
+          <a class="button-light" href="#start" title="All the way up"
             >Back to Top</a
           >
         </nav>
