Small beauty changes

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
   <body>
     <header id="start" class="page-header">
       <nav>
-        <a class="button-dark" href="#bio">Bio</a>
-        <a class="button-dark" href="#contact">Contact</a>
+        <a class="button-light" href="#bio">Bio</a>
+        <a class="button-light" href="#contact">Contact</a>
       </nav>
       <h1>Rob's personal website</h1>
       <img class="image-fluid" src="images/me.jpeg" alt="" />
@@ -281,7 +281,7 @@
     <footer>
       <section>
         <nav>
-          <a class="button-light" href="#start" title="All the way up"
+          <a class="button-dark" href="#start" title="All the way up"
             >Back to Top</a
           >
         </nav>
