Change button name

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
   <body>
     <header id="start" class="header__style">
       <nav>
-        <a class="button__light" href="#bio">Bio</a>
-        <a class="button__light" href="#contact">Contact</a>
+        <a class="button--light" href="#bio">Bio</a>
+        <a class="button--light" href="#contact">Contact</a>
       </nav>
       <h1>Rob's personal website</h1>
       <img class="image__fluid" src="images/me.jpeg" alt="" />
@@ -280,7 +280,7 @@
     <footer>
       <section>
         <nav>
-          <a class="button__dark" href="#start" title="All the way up"
+          <a class="button--dark" href="#start" title="All the way up"
             >Back to Top</a
           >
         </nav>
