Add htmlhint to package.json

--- a/index.html
+++ b/index.html
@@ -214,13 +214,14 @@
           <div>
             <address id="contact">
               <form method="post" action="mailto:roscha80@web.de">
-                <input
-                  type="image"
-                  id="image"
-                  alt="mail me"
-                  src="images/mail_red.png"
-                  title="Mail me"
-                />
+                <label for="image">
+                  <input
+                    type="image"
+                    id="image"
+                    alt="mail me"
+                    src="images/mail_red.png"
+                    title="Mail me"
+                /></label>
               </form>
             </address>
           </div>
